--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 3001 --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -48,6 +48,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.1",
@@ -75,7 +76,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@supabase/ssr": "^0.7.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
